--- a/trunk/wright/css/2_joomla.css
+++ b/trunk/wright/css/2_joomla.css
@@ -217,3 +217,12 @@ border:solid 0px;
 #system-message dt.notice { display: none; }
 #system-message dd.notice {  }
 #system-message dd.notice ul { color: #93246F; background: #F2E3ED; border-top: 3px solid #93246F; border-bottom: 3px solid #93246F;}
+
+/* Blanks */
+ul.whosonline {}
+a.syndicate-module {}
+dl.stats-module {}
+ul.sections-module {}
+div.search-module {}
+ul.relateditems {}
+div.random-image-module {}
