--- a/trunk/wright/css/5_core.css
+++ b/trunk/wright/css/5_core.css
@@ -1,2 +1,3 @@
 #logo a span { position: absolute; left: -5000em; }
 #logo a { display: block; }
+div.designer { text-indent: -1000em; background: url('../wright/images/jscright.png') no-repeat; }
