Pulling back GFont support Layout update for blog items Added support for header scripts

--- a/trunk/wright/css/2_joomla.css
+++ b/trunk/wright/css/2_joomla.css
@@ -331,6 +331,8 @@ margin:20px 10px 0 0;
 padding:0 0 0 30px;
 cursor:pointer;
 }
+.article_body {}
+.article_readmore { vertical-align: baseline; }
 /* ***************************************************************************************************** */
 /* PAGINATION */
 #main2 .pagination, #main .pagination {}
