--- a/trunk/wright/css/2_joomla.css
+++ b/trunk/wright/css/2_joomla.css
@@ -47,23 +47,23 @@ padding: 0 24px 0 6px;
 padding: 0 6px 0 24px;
 }
 .button2-left {
-background: url(../images_general/j_button2_left.png) no-repeat;
+background: url(../images/system/j_button2_left.png) no-repeat;
 float: left;
 margin-left: 5px;
 }
 .button2-right {
-background: url(../images_general/j_button2_right.png) 100% 0 no-repeat;
+background: url(../images/system/j_button2_right.png) 100% 0 no-repeat;
 float: left;
 margin-left: 5px;
 }
 .button2-left .image {
-background: url(../images_general/j_button2_image.png) 100% 0 no-repeat;
+background: url(../images/system/j_button2_image.png) 100% 0 no-repeat;
 }
 .button2-left .readmore {
-background: url(../images_general/j_button2_readmore.png) 100% 0 no-repeat;
+background: url(../images/system/j_button2_readmore.png) 100% 0 no-repeat;
 }
 .button2-left .pagebreak {
-background: url(../images_general/j_button2_pagebreak.png) 100% 0 no-repeat;
+background: url(../images/system/j_button2_pagebreak.png) 100% 0 no-repeat;
 }
 /* 
 * Tooltips
@@ -83,7 +83,7 @@ font-weight: bold;
 margin-top: -15px;
 padding-top: 15px;
 padding-bottom: 5px;
-background: url(../images_general/selector-arrow.png) no-repeat;
+background: url(../images/system/selector-arrow.png) no-repeat;
 }
 div.tooltip p {
 font-size: 90%;
@@ -145,7 +145,7 @@ a img.calendar {
 width: 16px;
 height: 16px;
 margin-left: 3px;
-background: url(../images_general/calendar.png) no-repeat;
+background: url(../images/system/calendar.png) no-repeat;
 cursor: pointer;
 vertical-align: middle;
 }
