--- a/trunk/wright/css/5_core.css
+++ b/trunk/wright/css/5_core.css
@@ -1,3 +1,4 @@
 #logo a span { position: absolute; left: -5000em; }
 #logo a { display: block; }
-div.designer { text-indent: -1000em; background: url('../images/jscright.png') no-repeat; }
+div.joomlashack { text-indent: -1000em; background: url('../images/jscright.png') no-repeat; }
+div.joomlapraise {  }
