--- a/trunk/html/mod_shackslides/css/sliderman.css
+++ b/trunk/html/mod_shackslides/css/sliderman.css
@@ -1,11 +1,36 @@
 .shackSlider {
 width: 500px;
 background:url(../images/bg.png);
+position:relative;
 }
 #slider {
 width: 500px;
 height: 250px;
 margin: 0 auto 10px auto;
+}
+#slider a.sliderPrev {
+background: url(../images/prev.png) no-repeat center center;
+width: 49px;
+height: 24px;
+display: inline-block;
+text-decoration: none;
+text-indent:-9999px;
+position:absolute;
+left:0;
+top:50%;
+}
+#slider a.sliderNext {
+background: url(../images/next.png) no-repeat center center;
+width: 49px;
+height: 24px;
+display: inline-block;
+text-decoration: none;
+line-height: 24px;
+text-align: center;
+text-indent:-9999px;
+position:absolute;
+right:0;
+top:50%;
 }
 .slideTitle {
 font-size: 10px;
