--- a/trunk/wright/css/4_typography.css
+++ b/trunk/wright/css/4_typography.css
@@ -283,6 +283,10 @@ outline:none;
 a:hover{
 text-decoration:none;
 }
+pre{
+font-family:"Courier New", Courier, monospace !important;
+font-size:12px;
+}
 hr {
 border:0 #ccc solid;
 border-top-width:1px;
