--- a/trunk/wright/css/5_core.css
+++ b/trunk/wright/css/5_core.css
@@ -1,4 +1,5 @@
 #logo a span { position: absolute; left: -5000em; }
+#logo.noimage a span { position: static; }
 #logo a { display: block; }
 div.joomlashack { text-indent: -1000em; background: url('../images/jscright.png') no-repeat; }
 div.joomlapraise {  }
