--- a/trunk/wright/css/typography.css
+++ b/trunk/wright/css/typography.css
@@ -1,65 +1,65 @@
 /* Font stack options */
-body.b_arial * {
+body.b_arial {
 	font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
-body.b_baskerville * {
+body.b_baskerville {
 	font-family: Baskerville, "Times New Roman", Times, serif;
 }
-body.b_cambria * {
+body.b_cambria {
 	font-family: Cambria, Georgia, Times, "Times New Roman", serif;
 }
-body.b_centurygothic * {
+body.b_centurygothic {
 	font-family: "Century Gothic", "Apple Gothic", sans-serif;
 }
-body.b_consolas * {
+body.b_consolas {
 	font-family: Consolas, "Lucida Console", Monaco, monospace;
 }
-body.b_copperplatelight * {
+body.b_copperplatelight {
 	font-family: "Copperplate Light", "Copperplate Gothic Light", serif;
 }
-body.b_couriernew * {
+body.b_couriernew {
 	font-family: "Courier New", Courier, monospace;
 }
-body.b_franklingothic * {
+body.b_franklingothic {
 	font-family: "Franklin Gothic Medium", "Arial Narrow Bold", Arial, sans-serif;
 }
-body.b_futura * {
+body.b_futura {
 	font-family: Futura, "Century Gothic", AppleGothic, sans-serif;
 }
-body.b_garamond * {
+body.b_garamond {
 	font-family: Garamond, "Hoefler Text", "Times New Roman", Times, serif;
 }
-body.b_geneva * {
+body.b_geneva {
 	font-family: Geneva, "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", Verdana, sans-serif;
 }
-body.b_georgia * { 
+body.b_georgia { 
 	font-family: Georgia, Cambria, "Times New Roman", Times, serif;
 }
-body.b_gillsans * {
+body.b_gillsans {
 	font-family: "Gill Sans", Calibri, "Trebuchet MS", sans-serif;
 }
-body.b_helvetica * {
+body.b_helvetica {
 	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
-body.b_impact * {
+body.b_impact {
 	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
-body.b_lucidasans * {
+body.b_lucidasans {
 	font-family: "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 }
-body.b_palatino * {
+body.b_palatino {
 	font-family: Palatino, "Palatino Linotype", Georgia, Times, "Times New Roman", serif;
 }
-body.b_tahoma * {
+body.b_tahoma {
 	font-family: Tahoma, Geneva, Verdana, sans-serif;
 }
-body.b_times * {
+body.b_times {
 	font-family: Times, "Times New Roman", Georgia, serif;
 }
-body.b_trebuchetms * {
+body.b_trebuchetms {
 	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande"," Lucida Sans", Arial, sans-serif;
 }
-body.b_verdana * {
+body.b_verdana {
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
