Updated css in Wright

--- a/trunk/wright/css/typography.css
+++ b/trunk/wright/css/typography.css
@@ -39,7 +39,7 @@ body.b_gillsans {
 	font-family: "Gill Sans", Calibri, "Trebuchet MS", sans-serif;
 }
 body.b_helvetica {
-	font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body.b_impact {
 	font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
