# fixed issue with leading content widths # adjusted padding for 3-col view

--- a/branches/semantic/wright/css/joomla16.css
+++ b/branches/semantic/wright/css/joomla16.css
@@ -24,7 +24,7 @@ Ctrl/Cmd + F to find the @groups named below
 
 .column_separator {padding: 20px 1%;}
 
-.items-leading {display: inline-block;}
+.items-leading {display: inline-block;width: 100%;}
 
 .cols-1 {display: block;float: none !important;margin: 0 !important;}
 
@@ -32,11 +32,11 @@ Ctrl/Cmd + F to find the @groups named below
 
 .cols-2 .column-2 {width:46%;float:right;margin:0}
 
-.cols-3 .column-1 {float:left;width:29%;padding:10px 5px;margin-right:4%}
+.cols-3 .column-1 {float:left;width:29%;padding:10px 5px 10px 0px;margin-right:4%}
 
 .cols-3 .column-2 {float:left;width:29%;margin-left:0;padding:10px 5px;}
 
-.cols-3 .column-3 {float:right;width:29%;padding:10px 5px}
+.cols-3 .column-3 {float:right;width:29%;padding:10px 0px 10px 5px;}
 
 .items-row {overflow:hidden}
 
@@ -405,6 +405,3 @@ span.star {
 }
 
 /* @end */
-
-
-
