--- a/trunk/wright/css/joomla15.css
+++ b/trunk/wright/css/joomla15.css
@@ -9,6 +9,7 @@ Ctrl/Cmd + F to find the @groups named below
 @group Article Info
 @group Pagination
 @group Contact
+@group Joomla! Modules
 @group Misc. Joomla! Styles
 
 */
@@ -16,92 +17,103 @@ Ctrl/Cmd + F to find the @groups named below
 
 /* @group Article Column Structure */
 
-.contentpaneopen, .blog {width: 100%;}
-
-.blog {margin: 0 0 20px 0;}
-
-.article_column {padding: 10px 0;}
-
-.column_separator {padding: 20px 1%;}
-
-.items-leading {display: inline-block;width: 100%;}
-
-.cols-1 {display: block;float: none !important;margin: 0 !important;}
-
-.cols-2 .column-1 {width:46%;float:left;}
-
-.cols-2 .column-2 {width:46%;float:right;margin:0}
-
-.cols-3 .column-1 {float:left;width:29%;padding:10px 5px 10px 0px;margin-right:4%}
-
-.cols-3 .column-2 {float:left;width:29%;margin-left:0;padding:10px 5px;}
-
-.cols-3 .column-3 {float:right;width:29%;padding:10px 0px 10px 5px;}
-
-.items-row {overflow:hidden}
-
-.column-1,.column-2,.column-3 {padding:10px 5px}
-
-.column-2 {width:55%;margin-left:40%;}
-
-.column-3 {width:30%}
-
-.leading {clear: both;}
-
-p.readmore {margin: 0;padding: 0;}
-
+.contentpaneopen, .blog {
+	width: 100%;
+}
+.blog {
+	margin: 0 0 20px 0;
+}
+.article_column {
+	padding: 10px 0;
+}
+.column_separator {
+	padding: 20px 1%;
+}
+.items-leading {
+	display: inline-block;
+	width: 100%;
+}
+.cols-1 {
+	display: block;
+	float: none !important;
+	margin: 0 !important;
+}
+.cols-2 .column-1 {
+	width:46%;
+	float:left;
+}
+.cols-2 .column-2 {
+	width:46%;
+	float:right;
+	margin:0
+}
+.cols-3 .column-1 {
+	float:left;
+	width:29%;
+	padding:10px 5px 10px 0px;
+	margin-right:4%
+}
+.cols-3 .column-2 {
+	float:left;
+	width:29%;
+	margin-left:0;
+	padding:10px 5px;
+}
+.cols-3 .column-3 {
+	float:right;
+	width:29%;
+	padding:10px 0px 10px 5px;
+}
+.items-row {
+	overflow:hidden
+}
+.column-1, .column-2, .column-3 {
+	padding:10px 5px
+}
+.column-2 {
+	width:55%;
+	margin-left:40%;
+}
+.column-3 {
+	width:30%
+}
+.leading {
+	clear: both;
+}
+p.readmore {
+	margin: 0;
+	padding: 0;
+}
 .item-page {
 }
-
 /* @end */
-
-
-
 
 /* @group Categories/Archives */
 
-div.categories-list ul,
-div.categories-list li,
-div.cat-children ul,
-div.cat-children li {
-	list-style: none;margin: 0;padding: 0;
+div.categories-list ul, div.categories-list li, div.cat-children ul, div.cat-children li {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
-
-div.categories-list li.first,
-div.cat-children li.first,
-div.cat-children li.last {
+div.categories-list li.first, div.cat-children li.first, div.cat-children li.last {
 	margin-left: 0;
 }
-div.categories-list li.first ul li,
-div.categories-list li.last ul li,
-div.cat-children li.first ul li,
-div.cat-children li.last ul li {
+div.categories-list li.first ul li, div.categories-list li.last ul li, div.cat-children li.first ul li, div.cat-children li.last ul li {
 	margin-left: 20px;
 }
-
-
-div.categories-list span.item-title,
-div.cat-children span.item-title {
+div.categories-list span.item-title, div.cat-children span.item-title {
 	font-size: 18px;
 	display: block;
 	margin: 10px 0px;
 	background: url(../images/icons/24/folder.png) no-repeat left center;
 }
-div.categories-list span.item-title a,
-div.cat-children span.item-title a {
+div.categories-list span.item-title a, div.cat-children span.item-title a {
 	padding-left: 20px;
 }
-
-span.article-count,
-span.weblink-count,
-span.contact-count,
-span.newsfeed-count {
+span.article-count, span.weblink-count, span.contact-count, span.newsfeed-count {
 	float: right;
 	clear: both;
 }
-
-
-
 /* Category Tables */
 
 table.category p {
@@ -110,27 +122,18 @@ table.category p {
 table.category a.category {
 	font-weight: bold;
 }
-
-
-
 /* @end */
 
-
-
-
 /* @group Article Info */
-
 
 .article-info-box {
 	border-bottom: 1px solid #eee;
 	margin-bottom: 10px;
 }
-
 .article-info-term {
 	clear: both;
 	display: none;
 }
-
 .article-info {
 	width: 100%;
 	clear: both;
@@ -142,25 +145,21 @@ table.category a.category {
 body.dark dl.article-info {
 	border-bottom: 1px dotted #000;
 }
-
-li.parent-category-name,li.category-name,li.create,li.modified,li.published,li.createdby,li.hits {
+li.parent-category-name, li.category-name, li.create, li.modified, li.published, li.createdby, li.hits {
 	padding: 1px 10px 1px 20px;
 	font: 11px/1.5em Helvetica, Tahoma, Verdana, sans-serif;
 	margin: 0;
 	float: left;
 }
-
 span.content_rating {
 	padding: 0;
 	width: 100%;
 	font-size: 11px;
 }
-
 span.content_rating img {
 	padding: 2px 1px;
 	vertical-align: bottom;
 }
-
 span.content_vote input {
 	margin: 0px 3px;
 	vertical-align: baseline;
@@ -170,38 +169,30 @@ span.content_vote {
 	display: inline-block;
 	margin: 5px 0px;
 }
-
 li.createdby {
 	background: url(../images/icons/16/user_suit.png) no-repeat left top;
 }
-
 li.create {
 	background: url(../images/icons/16/calendar.png) no-repeat left top;
 }
-
 li.modified {
 	background: url(../images/icons/16/calendar_edit.png) no-repeat left top;
 }
-
 li.published {
 	background: url(../images/icons/16/calendar_add.png) no-repeat left top;
 }
-
 li.hits {
 	background: url(../images/icons/16/chart_bar.png) no-repeat left top;
 }
-
 li.parent-category-name {
 	background: url(../images/icons/16/folder_go.png) no-repeat left top;
 }
-
 li.category-name {
 	background: url(../images/icons/16/folder.png) no-repeat left top;
 }
-
 /* Print & PDF Icons */
 
-ul.actions,ul.actions li {
+ul.actions, ul.actions li {
 	float: right;
 	list-style: none;
 	margin: 0;
@@ -210,32 +201,21 @@ ul.actions,ul.actions li {
 ul.actions li {
 	padding: 0px 2px;
 }
-
-
 /* @end */
-
-
-
 
 /* @group Pagination */
 
-
 /* Article Pagination */
 
-ul.pagenav,
-.pagination ul {
+ul.pagenav, .pagination ul {
 	text-align:center;
 	margin: 10px auto;
 	list-style: none;
 }
-
-ul.pagenav li,
-.pagination ul li {
+ul.pagenav li, .pagination ul li {
 	display:inline;
 }
-
-ul.pagenav li a,
-.pagination li a {
+ul.pagenav li a, .pagination li a {
 	padding: 5px 10px;
 	border-radius:4px;
 	border: 1px solid;
@@ -244,7 +224,6 @@ ul.pagenav li a,
 	-webkit-border-radius:4px;
 	text-decoration: none;
 }
-
 /* Category Pagination */
 
 .pagination {
@@ -257,12 +236,9 @@ ul.pagenav li a,
 	-webkit-border-radius: 5px;
 	-khtml-border-radius: 5px;
 }
-
 .pagination span {
 	padding: 0px 4px;
 }
-
-
 .pagination a {
 	padding: 4px 8px;
 	text-decoration: none;
@@ -272,14 +248,10 @@ ul.pagenav li a,
 	-webkit-border-radius: 5px;
 	-khtml-border-radius: 5px;
 }
-
-.counter,.pagenavcounter {
+.counter, .pagenavcounter {
 	display: block;
 	text-align: center;
 }
-
-
-
 /* @end */
 
 /* @group Contact */
@@ -296,10 +268,7 @@ body.light div.panel {
 body.dark div.panel {
 	border-bottom: 1px solid #000;
 }
-
-
 /* @end */
-
 
 /* @group Misc. Joomla! Styles */
 
@@ -308,7 +277,6 @@ body.dark div.panel {
 	float: left;
 	margin: 0px 5px 0px 0px;
 }
-
 .hidelabeltxt {
 	display: none;
 	visibility: hidden;
@@ -320,18 +288,36 @@ body.dark div.panel {
 	float: right;
 }
 .fl-right {
-	float: right;	
+	float: right;
 }
-
 .login-fields {
 	margin: 10px 0px;
 }
-
 span.star {
 	color: red;
 }
-
 /* Tool Tips */
+.tool-tip {
+	float: left;
+	border: 1px solid #D4D5AA;
+	padding: 5px;
+	background: #FFFFCC;
+	max-width: 200px;
+}
+.tool-title {
+	padding: 0;
+	margin: 0;
+	margin-top: -15px;
+	padding-top: 15px;
+	padding-bottom: 5px;
+	background: url(../../system/images/selector-arrow.png) no-repeat;
+	font-size: 100%;
+	font-weight: bold;
+}
+.tool-text {
+	margin: 0;
+	font-size: 100%;
+}
 .tip-wrap {
 	text-align: left;
 	padding: 5px 7px;
@@ -340,9 +326,9 @@ span.star {
 	-moz-border-radius: 4px;
 	background-color: #ffd758;
 	border-color: #ffb30a;
-    box-shadow: 1px 1px 0 #fff5d6 inset, -1px -1px 0 #fff5d6 inset;
-    -moz-box-shadow: 1px 1px 0 #fff5d6 inset, -1px -1px 0 #fff5d6 inset;
-    -webkit-box-shadow: 1px 1px 0 #fff5d6 inset, -1px -1px 0 #fff5d6 inset;
+	box-shadow: 1px 1px 0 #fff5d6 inset, -1px -1px 0 #fff5d6 inset;
+	-moz-box-shadow: 1px 1px 0 #fff5d6 inset, -1px -1px 0 #fff5d6 inset;
+	-webkit-box-shadow: 1px 1px 0 #fff5d6 inset, -1px -1px 0 #fff5d6 inset;
 	text-shadow: #fff0c0 1px 1px 0;
 }
 .tip-text {
@@ -354,13 +340,11 @@ span.star {
 	width: 100%;
 	white-space: nowrap;
 }
-
 .tip-title {
 	font-weight: bold;
 	font-size: 14px;
 	color: #322508;
 }
-
 /* User Form Submission */
 
 .formelm {
@@ -377,10 +361,9 @@ span.star {
 .formelm select {
 	margin-left: 0px;
 }
-
 .button2-left a {
-    font-weight: bold;
-    text-decoration: none;
+	font-weight: bold;
+	text-decoration: none;
 	font: bold 12px/28px Helvetica, Arial, sans-serif;
 	margin: 5px 10px 0px 0px;
 	padding: 0px 10px;
@@ -392,18 +375,16 @@ span.star {
 	border-radius:4px;
 	-webkit-border-radius:4px;
 	-moz-border-radius:4px;
-    -moz-box-shadow: 1px 1px 0 #fff inset, -1px -1px 0 #fff inset;
-    -webkit-box-shadow: 1px 1px 0 #fff inset, -1px -1px 0 #fff inset;
+	-moz-box-shadow: 1px 1px 0 #fff inset, -1px -1px 0 #fff inset;
+	-webkit-box-shadow: 1px 1px 0 #fff inset, -1px -1px 0 #fff inset;
 }
 .button2-left a:hover {
 	background-color: #f6f6f6;
 }
-
 #system-message li {
-	margin: 0px 0px 5px 20px;
+	margin: 0px 0px 0px 40px;
 	padding: 0;
 }
-
 .register {
 	padding: 10px 0px;
 }
