Updated a few wright styles

--- a/trunk/wright/css/layout.css
+++ b/trunk/wright/css/layout.css
@@ -219,7 +219,7 @@ Main Layout Grid - Proceed with caution
 	padding:0%;
 }
 .container_12 .flexgrid_1 {
-	width:auto;
+	width:940px;
 }
 .container_12 .flexgrid_2 {
 	width:47.9%;
