Wright This update applies only to simpleTech for now, as we're testing it for all the other templates built with Wright - Stacked suffix for adding icon to the modules using: |icon|<icon_name>| - Stacked suffix for positioning the icon at the left or right into the module: |icon|left|<icon_name> or |icon|right|<icon_name> - Stacked suffix for setting a fixed width for the module: |gridwidth|x  (where x is 1/x of the total width, up to 6) - does not apply to Sidebars, only to flexgrids - Added set of icons for adding to the modules - NEW: CSS styles for making icons work correctly

--- a/trunk/wright/css/layout.css
+++ b/trunk/wright/css/layout.css
@@ -236,3 +236,13 @@ Main Layout Grid - Proceed with caution
 .container_12 .flexgrid_6 {
 	width:14%;
 }
+
+div.icon-right div.module_icon {
+	float: right;
+	margin: 0 5px 10px 10px;
+}
+
+div.icon-left div.module_icon {
+	float: left;
+	margin: 0 10px 10px 5px;
+}
