Wright Fix for STRICT php notices in the framework itself Newest 2.5 featured images now compatible

--- a/trunk/wright/css/joomla25.css
+++ b/trunk/wright/css/joomla25.css
@@ -452,4 +452,26 @@ span.star {
 	display: inline-block;
 }
 
+/* Images and links */
+
+.img-intro-left,
+.img-fulltext-left {
+	float: left;
+	margin: 10px;
+}
+
+.img-intro-right,
+.img-fulltext-right {
+	float: right;
+	margin: 10px;
+}
+
+p.img_caption,
+.item p.img_caption,
+.item-page p.img_caption {
+	clear: none;
+}
+
+
+
 /* @end */
