--- a/trunk/wright/css/joomla15.css
+++ b/trunk/wright/css/joomla15.css
@@ -393,5 +393,32 @@ span.star {
 	display: inline-block;
 }
 
+/* toc */
+
+table.contenttoc {
+	color: #330;
+	border: 1px solid #D6D6D6;
+	margin: 5px;
+	padding: 1px;
+	float: right;
+	width: auto;
+}
+
+table.contenttoc th {
+	background-color: #ECECEC;
+	color: #4F4F4F;
+}
+
+table.contenttoc td {
+	font-size: 0.9em;
+	font-weight: normal;
+	text-align: left;
+	padding: 2px 0px 2px 4px;
+}
+
+div.pagenavcounter {
+	color: #4F4F4F;
+	text-align: left;
+}
 
 /* @end */
