--- a/code/wright/css/joomla25.css
+++ b/code/wright/css/joomla25.css
@@ -106,22 +106,7 @@ h6{
 /* @ Footer **************************************/
 
 .footer1, .footer2 {
-    float: left;
     text-align: center;
-}
-
-.footer2 {
-    margin-left: 5px;
-}
-
-#footer .module, #footer .moduletable {
-    background-color: transparent;
-    border: 0 none;
-    display: table;
-    margin: 5px auto 0;
-    float: none;
-    padding: 0 5px;
-    width: auto;
 }
 
 a.joomlashack {
@@ -133,15 +118,16 @@ a.joomlashack {
     background: url("../images/jscright.png") no-repeat scroll 0 0 transparent;
 }
 	
-@media (max-width: 900px){
-	.foter1,
+@media (max-width: 979px){
+	.footer1,
 	.footer2{
 		float: none;
 		text-align: center;
 	}
 	
 }
-@media (max-width: 750px){
+
+@media (max-width: 767px){
 	#footer{
 		margin-left: -20px;
 		margin-right: -20px;
@@ -162,6 +148,7 @@ a.joomlashack {
 	background-repeat:repeat-x;border-color:#252525;
 	filter:progid:dximagetransform.microsoft.gradient(startColorstr='#ff222222',endColorstr='#ff111111',GradientType=0)}
 }
+
 #footer a {
 	color:#000000;
 }
@@ -287,7 +274,7 @@ p.readmore {
 	padding: 0;
 }
 
-@media (max-width:800px) {
+@media (max-width:767px) {
 	div.items-row div.item {
 		clear: both;
 	}
@@ -546,8 +533,7 @@ div.disabled{
 	display: inline;
 }
 .counter, .pagenavcounter {
-	display: block;
-	float:left;
+	display: inline-block;
 	line-height:35px;
 	margin-right:5px;
 	text-align: center;
@@ -737,35 +723,24 @@ p.img_caption,
 /* toc ****************************************************************************************************************************/
 
 div#article-index {
-	color: #330;
-	border: 1px solid #D6D6D6;
 	margin: 5px;
 	float: right;
 	width: auto;
-	padding: 10px;
 }
 
 div#article-index ul {
 	margin: 0;
 	padding: 0;
 }
-
-div#article-index ul li {
-	list-style: none;
-	font-size: 0.9em;
-	font-weight: normal;
-	text-align: left;
-	padding: 0;
-	margin: 0 5px;
-}
-
-div#article-index ul li a.active {
-	font-weight: bold;
+a.toclink.active{
+	color: #555555;
 }
 
 div.pagenavcounter {
 	color: #4F4F4F;
 	text-align: left;
+	background-color: #FAFAFA;
+	padding: 0 5px;
 }
 div.intro{
 	padding-left: 14px;
@@ -998,7 +973,6 @@ dl.label.label-info dt{
     border: 1px solid transparent;
     border-radius: 4px 4px 0 0;
     line-height: 18px;
-    padding-bottom: 2px;
     padding-top: 8px;
 }
 .nav-tabs  a, .nav-pills  a{
@@ -1029,13 +1003,15 @@ dl.label.label-info dt{
     margin: 0;
 }
 .panel h3 {
-    box-shadow: 0 0 20px #E9E9E9 inset;
     margin-bottom: 0;
     margin-left: -10px;
     padding: 5px;
     width: 100%;
     position: relative;
     z-index: 2;
+}
+.tabs.nav h3{
+	margin-bottom: 0;
 }
 #contact-slider dt h3{
 	margin-bottom: 0;
@@ -1056,14 +1032,14 @@ dl.label.label-info dt{
 	clear: both;
 }
 
-#contact-slider div:first-child + .panel {
+div:first-child + .panel {
     border-radius: 5px 5px 0 0;
 }
 .panel:last-child {
     border-bottom: 1px solid #ddd;
     border-radius: 0 0 5px 5px;
 }
-#contact-slider .panel h3.pane-toggler-down a{
+ .panel h3.pane-toggler-down a{
 	color: black;
 }
 
